--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +21,10 @@ android {
 dependencies {
     compile 'org.jetbrains:annotations:13.0'
 
+    compile 'com.android.support:support-annotations:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+
     compile 'org.apache.commons:commons-lang3:3.4'
 
-    compile 'com.android.support:support-annotations:23.1.1'
+    compile 'org.apache.commons:commons-collections4:4.1'
 }
