--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 
     compile 'com.android.support:support-annotations:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
 
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
