--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -28,4 +28,9 @@ dependencies {
 
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
+
+    provided 'org.projectlombok:lombok:1.16.10'
+
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
